{{$NEXT}}

2.004000 2017-10-27

- The following new anonymizer attributes were added to GeoIP2::Record::Traits
  for use with GeoIP2 Precision Insights: is_anonymous(), is_anonymous_vpn(),
  is_hosting_provider(), is_public_proxy(), and is_tor_exit_node().
- Documented $reader->enterprise()
- Updated usage of Data::Validate::IP so that we don't do separate IPv4 and
  IPv6 checks. This provides a very small performance gain.
- Switched from List::MoreUtils to List::SomeUtils. Fixes #52.


2.003005 2017-05-08

- Added support for the GeoLite2 ASN database.


2.003004 2017-03-23

- Replace use of namespace::autoclean with namespace::clean.
  namespace::autoclean appears to be causing occasional load-order compilation
  failures when the GeoIP2 Moo classes are inflated into Moose classes.


2.003003 2017-01-04

[ ENHANCEMENTS ]

- The enterprise() method on GeoIP2::Database::Reader now supports GeoIP2
  Precision Enterprise databases.

[ OTHER ]

- namespace::autoclean is now used to remove imported functions from class
  namespaces.


2.003002 2016-11-21

[ BUGFIXES ]

- Exceptions are now correctly thrown for responses containing JSON but no code
  or error keys.

[ OTHER ]

- Updated documentation to clarify what the accuracy radius is and that it
  is now included in City.


2.003001 2016-04-25

- In 2.003000, Code::TidyAll::Plugin::SortLines::Naturally was mistakenly
  included as a test dependency. It is now a develop dependency. GitHub #35.
- Fixed test failures due to comparison of floating point numbers. GitHub #34.


2.003000 2016-04-20

- Added support for the GeoIP2 Enterprise database.


2.002000 2015-06-29

- Added support for 'average_income' and 'population_density' in the
  Insights location record

- Minor optimizations in the type checks

- The is_anonymous_proxy() and is_satellite_provider() attributes on
  GeoIP2::Record::Traits have been deprecated. Please use our GeoIP2 Anonymous