@@ -57,6 +57,14 @@ This returns a C<geoname_id> for the country.
 
 This attribute is returned by all end points.
 
+=head2 $country_rec->is_in_european_union()
+
+This returns a true value if the country is a member state of the European
+Union and a false value otherwise.
+
+This attribute is available from all web service end points and the GeoIP2
+Country, City, and Enterprise databases.
+
 =head2 $country_rec->iso_code()
 
 This returns the two-character ISO 3166-1
